; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/esp_event/default_event_loop/main/extr_main.c_timer_expiry_handler.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/esp_event/default_event_loop/main/extr_main.c_timer_expiry_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timer_expiry_handler.count = internal global i32 0, align 4
@TIMER_EXPIRIES_COUNT = common dso_local global i32 0, align 4
@TIMER = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"%s:%s: posting to default loop\00", align 1
@TIMER_EVENT_STOPPED = common dso_local global i32 0, align 4
@TIMER_EVENTS = common dso_local global i32 0, align 4
@portMAX_DELAY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [57 x i8] c"%s:%s: timer_expiry_handler, executed %d out of %d times\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i8*)* @timer_expiry_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_expiry_handler(i8* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* @timer_expiry_handler.count, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* @timer_expiry_handler.count, align 4
  %11 = load i32, i32* @timer_expiry_handler.count, align 4
  %12 = load i32, i32* @TIMER_EXPIRIES_COUNT, align 4
  %13 = icmp sge i32 %11, %12
  br i1 %13, label %14, label %29

14:                                               ; preds = %4
  %15 = load i32, i32* @TIMER, align 4
  %16 = call i32 @esp_timer_stop(i32 %15)
  %17 = call i32 @ESP_ERROR_CHECK(i32 %16)
  %18 = load i32, i32* @TAG, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* @TIMER_EVENT_STOPPED, align 4
  %22 = call i32 @get_id_string(i32 %20, i32 %21)
  %23 = call i32 (i32, i8*, i32, i32, ...) @ESP_LOGI(i32 %18, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %22)
  %24 = load i32, i32* @TIMER_EVENTS, align 4
  %25 = load i32, i32* @TIMER_EVENT_STOPPED, align 4
  %26 = load i32, i32* @portMAX_DELAY, align 4
  %27 = call i32 @esp_event_post(i32 %24, i32 %25, i32* null, i32 0, i32 %26)
  %28 = call i32 @ESP_ERROR_CHECK(i32 %27)
  br label %29

29:                                               ; preds = %14, %4
  %30 = load i32, i32* @TAG, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @get_id_string(i32 %32, i32 %33)
  %35 = load i32, i32* @timer_expiry_handler.count, align 4
  %36 = load i32, i32* @TIMER_EXPIRIES_COUNT, align 4
  %37 = call i32 (i32, i8*, i32, i32, ...) @ESP_LOGI(i32 %30, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.1, i64 0, i64 0), i32 %31, i32 %34, i32 %35, i32 %36)
  ret void
}

declare dso_local i32 @ESP_ERROR_CHECK(i32) #1

declare dso_local i32 @esp_timer_stop(i32) #1

declare dso_local i32 @ESP_LOGI(i32, i8*, i32, i32, ...) #1

declare dso_local i32 @get_id_string(i32, i32) #1

declare dso_local i32 @esp_event_post(i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
